fix: user buttons overflowing and gcs not showing

--- a/src/components/User/Button/index.module.scss
+++ b/src/components/User/Button/index.module.scss
@@ -3,6 +3,7 @@
 	border-radius: 6px;
 	gap: 8px;
 	cursor: pointer;
+	overflow: hidden;
 
 	.userDetail {
 		display: flex;
